--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,5 +20,11 @@
     // suppress errors for missing 'import React' in files
     "react/react-in-jsx-scope": "off",
     "semi": [2, "always"]
+  },
+
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
